# ai-template-slides

./: .env.example  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/services/: parser.py  renderer.py
backend/app/templates/academic/: meta.yaml
backend/app/templates/pitch_deck/: meta.yaml
backend/app/templates/sales/: meta.yaml  template.pptx
content_templates/: academic.json  pitch_deck.json  sales.json
frontend/src/: App.vue  api.ts
frontend/src/components/: UploadText.vue
kimi_cli/: __init__.py  renderer.py
scripts/: create_template.py
slidegen/: __init__.py  main.py  parser.py
